[tool.poetry]
name = "curate"
version = "0.1.0"
description = "Add artists from last.fm into Tidal"
authors = ["novafacing <rowanbhart@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pylast = "^5.0.0"
tidalapi = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
